<resources>
    <string name="app_name">MyApplication</string>
    <string name="coming_soon">Coming soon</string>
    <string name="search_coming_soon">Search coming soon</string>
    <string name="login_placeholder_success">Login successful</string>
    <string name="register_placeholder_success">Account created</string>
    <string name="checkout_placeholder">Checkout coming soon</string>
    <string name="qty_placeholder">Quantity update coming soon</string>
    <string name="details_top_title">D&#233;tails du produit</string>
    <string name="details_back">Retour</string>
    <string name="details_share">Partager</string>
    <string name="details_image_cd">Image produit</string>
    <string name="details_reviews_count">(%1$d avis)</string>
    <string name="details_description_title">Description</string>
    <string name="details_quantity_label">Quantit&#233;</string>
    <string name="details_stock_helper">Derni&#232;res unit&#233;s disponibles</string>
    <string name="details_total_label">Total</string>
    <string name="details_add_to_cart">Ajouter au panier</string>
    <string name="details_added_to_cart">%1$d article(s) ajout&#233;(s) au panier</string>
    <string name="details_share_todo">Partage &#224; impl&#233;menter</string>
    <string name="details_product_not_found">Produit introuvable</string>
    <string name="encoding_probe">&#233; &#224; &#231; &#249; &#234; &#339;</string>
    <string name="alert_dialog_title">Alerte</string>
    <string name="alert_dialog_message">Souhaitez-vous activer les alertes pour les nouveaut&#233;s et offres ?</string>
    <string name="alert_dialog_cancel">Annuler</string>
    <string name="alert_dialog_confirm">Confirmer</string>
    <string name="alert_dialog_confirmed">Alertes activ&#233;es</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_back">Retour</string>
    <string name="notifications_empty_state">Aucune notification pour le moment.</string>
    <string name="notifications_permission_denied_hint">Activez les notifications dans les parametres de l\'application.</string>
    <string name="auth_dialog_title">S inscrire</string>
    <string name="auth_dialog_message">Choisissez une option pour continuer.</string>
    <string name="auth_dialog_create_account">Creer compte</string>
    <string name="auth_dialog_existing_client">Deja un client</string>
    <string name="profile_signup_chip">S\'inscrire</string>
    <string name="search_hint_products">Rechercher des produits tunisiens</string>
    <string name="product_added_to_favorites">%1$s ajoute aux favoris</string>
    <string name="product_removed_from_favorites">%1$s retire des favoris</string>
    <string name="product_added_to_cart">%1$s ajoute au panier</string>
    <string name="login_validation_error">Verifier votre email et mot de passe.</string>
    <string name="register_validation_error">Completer correctement tous les champs.</string>
    <string name="loading_progress_percent">%1$d%%</string>
    <string name="loading_progress_full">100%</string>
    <string name="user_guest_name">Utilisateur invit&#233;</string>
    <string name="details_star_symbol">&#9733;</string>
    <string name="details_check_symbol">&#10003;</string>
    <string name="settings_title">Parametres</string>
    <string name="settings_back">Retour</string>
    <string name="settings_language_title">Langue</string>
    <string name="settings_language_subtitle">Fran&#231;ais ou English</string>
    <string name="language_settings_title">Langue</string>
    <string name="language_option_french">Fran&#231;ais</string>
    <string name="language_option_english">English</string>
    <string name="language_saved">Langue mise a jour</string>
    <string name="auto_text_001">Logo FatiWeb</string>
    <string name="auto_text_002">FatiWeb Market</string>
    <string name="auto_text_003">Favoris</string>
    <string name="auto_text_004">Recherche</string>
    <string name="auto_text_005">Rechercher des produits tunisiens</string>
    <string name="auto_text_006">Filtres</string>
    <string name="auto_text_007">Accueil</string>
    <string name="auto_text_008">Explore</string>
    <string name="auto_text_009">Panier</string>
    <string name="auto_text_010">Profil</string>
    <string name="auto_text_011">Nos Cat&#233;gories</string>
    <string name="auto_text_012">Cat&#233;gorie Artisanat</string>
    <string name="auto_text_013">Artisanat</string>
    <string name="auto_text_014">Cat&#233;gorie Cosm&#233;tiques</string>
    <string name="auto_text_015">Cosm&#233;tiques</string>
    <string name="auto_text_016">Cat&#233;gorie &#201;pices</string>
    <string name="auto_text_017">&#201;pices</string>
    <string name="auto_text_018">Cat&#233;gorie V&#234;tements</string>
    <string name="auto_text_019">V&#234;tements</string>
    <string name="auto_text_020">Cat&#233;gorie D&#233;coration</string>
    <string name="auto_text_021">D&#233;coration</string>
    <string name="auto_text_022">Cat&#233;gorie Huiles</string>
    <string name="auto_text_023">Huiles</string>
    <string name="auto_text_024">Mes Favoris</string>
    <string name="auto_text_025">Aucun produit en favoris pour le moment.</string>
    <string name="auto_text_026">FATIWEB\nMARKET</string>
    <string name="auto_text_027">AUTHENTIC TUNISIAN MARKETPLACE</string>
    <string name="auto_text_028">INITIALIZING</string>
    <string name="auto_text_029">75%</string>
    <string name="loading_step_preferences">Checking user preferences...</string>
    <string name="loading_step_language">Initializing language...</string>
    <string name="loading_step_catalog">Loading product catalog...</string>
    <string name="loading_step_cart">Preparing your cart...</string>
    <string name="loading_step_onboarding">Finalizing setup...</string>
    <string name="loading_step_ready">Ready!</string>
    <string name="auto_text_030">SECURE TUNISIAN GATEWAY</string>
    <string name="auto_text_031">Connexion</string>
    <string name="auto_text_032">Bienvenue sur FatiWeb</string>
    <string name="auto_text_033">Le meilleur de l\'artisanat tunisien a portee de main.</string>
    <string name="auto_text_034">E-mail</string>
    <string name="auto_text_035">votre@email.com</string>
    <string name="auto_text_036">Mot de passe</string>
    <string name="auto_text_037">Mot de passe oublie ?</string>
    <string name="auto_text_038">Se connecter</string>
    <string name="auto_text_039">Ou se connecter avec</string>
    <string name="auto_text_040">Google</string>
    <string name="auto_text_041">Facebook</string>
    <string name="auto_text_042">Pas encore de compte ?</string>
    <string name="auto_text_043">S\'inscrire</string>
    <string name="auto_text_044">Banni&#232;re promotion locale</string>
    <string name="auto_text_045">PROMO LOCALE</string>
    <string name="auto_text_046">Artisanat de Nabeul</string>
    <string name="auto_text_047">Jusqu\'&#224; -30% sur la c&#233;ramique</string>
    <string name="auto_text_048">Banni&#232;re secondaire</string>
    <string name="auto_text_049">BIO &amp; NATUREL</string>
    <string name="auto_text_050">Cat&#233;gories</string>
    <string name="auto_text_051">Voir tout</string>
    <string name="auto_text_052">Epices</string>
    <string name="auto_text_053">Vetements</string>
    <string name="auto_text_054">Deco</string>
    <string name="auto_text_055">Produits Phares</string>
    <string name="auto_text_056">Produit Ch&#233;chia Traditionnelle</string>
    <string name="auto_text_057">PROMO</string>
    <string name="auto_text_058">Favori Ch&#233;chia Traditionnelle</string>
    <string name="auto_text_059">Ch&#233;chia Traditionnelle</string>
    <string name="auto_text_060">Laine pure, Artisanale</string>
    <string name="auto_text_061">45.000 DT</string>
    <string name="auto_text_062">Ajouter Ch&#233;chia Traditionnelle au panier</string>
    <string name="auto_text_063">Produit Bijoux de l\'Argent</string>
    <string name="auto_text_064">Favori Bijoux de l\'Argent</string>
    <string name="auto_text_065">Bijoux de l\'Argent</string>
    <string name="auto_text_066">Main d\'oeuvre Djerba</string>
    <string name="auto_text_067">120.000 DT</string>
    <string name="auto_text_068">Ajouter Bijoux de l\'Argent au panier</string>
    <string name="auto_text_069">Produit Marqoum Kairouan</string>
    <string name="auto_text_070">Favori Marqoum Kairouan</string>
    <string name="auto_text_071">Marqoum Kairouan</string>
    <string name="auto_text_072">Laine 2x1.5m</string>
    <string name="auto_text_073">350.000 DT</string>
    <string name="auto_text_074">Ajouter Marqoum Kairouan au panier</string>
    <string name="auto_text_075">Produit Balgha Cuir</string>
    <string name="auto_text_076">Favori Balgha Cuir</string>
    <string name="auto_text_077">Balgha Cuir</string>
    <string name="auto_text_078">Cuir v&#233;ritable M&#233;dina</string>
    <string name="auto_text_079">65.000 DT</string>
    <string name="auto_text_080">Ajouter Balgha Cuir au panier</string>
    <string name="auto_text_081">Passer</string>
    <string name="auto_text_082">Bienvenue sur FatiWeb Market</string>
    <string name="auto_text_083">Decouvrez le meilleur des produits tunisiens. De l\'artisanat aux produits locaux, tout ce dont vous avez besoin est a portee de main.</string>
    <string name="auto_text_084">Suivant &gt;</string>
    <string name="auto_text_085">Decouvrez l\'excellence tunisienne</string>
    <string name="auto_text_086">Explorez nos produits locaux a travers nos categories soigneusement selectionnees.</string>
    <string name="auto_text_087">*</string>
    <string name="auto_text_088">Alimentation</string>
    <string name="auto_text_089">Saveurs du terroir</string>
    <string name="auto_text_090">Cosmetiques</string>
    <string name="auto_text_091">Soin naturel et bio</string>
    <string name="auto_text_092">L\'heritage de nos artisans</string>
    <string name="auto_text_093">Livraison rapide et paiement securise</string>
    <string name="auto_text_094">Recevez vos produits tunisiens preferes ou que vous soyez. Payez en toute confiance par carte ou a la livraison.</string>
    <string name="auto_text_095">Commencer &gt;</string>
    <string name="auto_text_096">Mon Panier</string>
    <string name="auto_text_097">Votre panier est vide.</string>
    <string name="auto_text_098">Sous-total</string>
    <string name="auto_text_099">0.000 DT</string>
    <string name="auto_text_100">Livraison</string>
    <string name="auto_text_101">Passer a la caisse</string>
    <string name="auto_text_102">-</string>
    <string name="auto_text_103">+</string>
    <string name="auto_text_104">Creer un compte</string>
    <string name="auto_text_105">Rejoignez la communaute de l\'artisanat.</string>
    <string name="auto_text_106">Nom complet</string>
    <string name="auto_text_107">Ex: Ahmed Ben Salem</string>
    <string name="auto_text_108">********</string>
    <string name="auto_text_109">Ou s\'inscrire avec</string>
    <string name="auto_text_110">Deja un compte ?</string>
    <string name="auto_text_111">Utilisateur invit&#233;</string>
    <string name="auto_text_112">Tunis, Tunisie</string>
    <string name="auto_text_113">Mes Commandes</string>
    <string name="auto_text_114">Historique et suivi en direct</string>
    <string name="auto_text_115">Adresses de livraison</string>
    <string name="auto_text_116">G&#233;rer vos adresses d\'exp&#233;dition</string>
    <string name="auto_text_117">Param&#232;tres</string>
    <string name="auto_text_118">Confidentialit&#233;, langue et alertes</string>
    <string name="auto_text_119">Aide &amp; Support</string>
    <string name="auto_text_120">Contactez-nous, FAQ</string>
    <string name="auto_text_121">D&#233;connexion</string>
    <string name="auto_text_122">X</string>
    <string name="auto_text_123">1</string>
    <string name="currency_dt">DT</string>
</resources>