<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardProductMarqoum"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_product_image_height">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorSurface"
            app:cardCornerRadius="@dimen/home_product_image_radius"
            app:cardElevation="@dimen/space_0"
            app:strokeColor="@color/colorBorderLight"
            app:strokeWidth="@dimen/stroke_width_default">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/auto_text_069"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/product3example" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnFavoriteMarqoum"
            android:layout_width="@dimen/home_product_heart_size"
            android:layout_height="@dimen/home_product_heart_size"
            android:layout_gravity="end|top"
            android:layout_margin="@dimen/home_product_heart_margin"
            app:cardBackgroundColor="@color/colorSurfaceVariant"
            app:cardCornerRadius="@dimen/corner_radius_round"
            app:cardElevation="@dimen/space_0"
            app:strokeWidth="@dimen/space_0">

            <ImageView
                android:id="@+id/ivFavoriteMarqoum"
                android:layout_width="@dimen/home_product_heart_icon_size"
                android:layout_height="@dimen/home_product_heart_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/auto_text_070"
                app:srcCompat="@drawable/ic_home_heart" />
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

    <TextView
        style="@style/HomeText.ProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_product_name_margin_top"
        android:text="@string/auto_text_071" />

    <TextView
        style="@style/HomeText.ProductSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_product_subtitle_margin_top"
        android:text="@string/auto_text_072" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_product_price_row_margin_top"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/HomeText.ProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_text_073" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnAddCartMarqoum"
            android:layout_width="@dimen/home_add_cart_button_size"
            android:layout_height="@dimen/home_add_cart_button_size"
            app:cardBackgroundColor="@color/home_text_primary"
            app:cardCornerRadius="@dimen/home_add_cart_button_radius"
            app:cardElevation="@dimen/space_0"
            app:strokeWidth="@dimen/space_0">

            <ImageView
                android:layout_width="@dimen/home_add_cart_icon_size"
                android:layout_height="@dimen/home_add_cart_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/auto_text_074"
                app:srcCompat="@drawable/ic_home_add_cart"
                app:tint="@color/colorSurface" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>
